IT: Streamline ITs more (#1952)
Changes:
* remove unneeded POM cruft
* remove embedded profile (is default) introduce forked profile
* CI: drop "embedded" profile use